Git_WGBH_QC/src/objects/CC_Alias__c.object
<CustomObject>
    <fields>
        <fullName>AVSResult__c</fullName>
        <label>AVSResult</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_City__c</fullName>
        <formula>Account__r.Preferred_Address__r.City__c</formula>
        <label>Account City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Country__c</fullName>
        <formula>Account__r.Preferred_Address__r.Country__c</formula>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Preferred_Address__c</fullName>
        <formula>HYPERLINK( &apos;/&apos; +  Account__r.Preferred_Address__r.Id , Account__r.Preferred_Address__r.Name )</formula>
        <label>Account Preferred Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <formula>Account__r.Preferred_Address__r.State__c</formula>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Street_1__c</fullName>
        <formula>Account__r.Preferred_Address__r.Street_1__c</formula>
        <label>Account Street 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Zip__c</fullName>
        <formula>Account__r.Preferred_Address__r.Postal_Code__c</formula>
        <label>Account Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC &amp; EFT Aliases</relationshipLabel>
        <relationshipName>CC_EFT_Aliases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AuthCode__c</fullName>
        <label>AuthCode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Owner_Name__c</fullName>
        <label>Bank Account Owner Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Type__c</fullName>
        <label>Bank Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Checking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saving</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_account_number__c</fullName>
        <label>Bank account number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVVResult__c</fullName>
        <label>CVVResult</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Holder_Name__c</fullName>
        <label>Card Holder Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Charge Card Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mastercard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VISA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Express</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CC &amp; EFT Aliases</relationshipLabel>
        <relationshipName>CC_Aliases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expire_Date__c</fullName>
        <label>Expire Date</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <label>GUID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Four_Digits__c</fullName>
        <label>Last Four Digits</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Account__c</fullName>
        <description>The merchant account</description>
        <label>Merchant Account</label>
        <referenceTo>Merchant_Accounts__c</referenceTo>
        <relationshipLabel>CC &amp; EFT Aliases</relationshipLabel>
        <relationshipName>CC_EFT_Aliases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>CC &amp; EFT Aliases</relationshipLabel>
        <relationshipName>CC_EFT_Aliases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentTypeID__c</fullName>
        <label>PaymentTypeID</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Description__c</fullName>
        <label>Payment Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_ID__c</fullName>
        <label>Payment ID</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complimentary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Funds Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Kind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mutual fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll Deduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Giving</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ResponseCode__c</fullName>
        <label>ResponseCode</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponseIndicator__c</fullName>
        <label>ResponseIndicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponseMessage__c</fullName>
        <label>ResponseMessage</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Routing_number__c</fullName>
        <label>Routing number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sage_Bank_Account_Type__c</fullName>
        <label>Sage Bank Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>DDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street1__c</fullName>
        <label>Street1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street2__c</fullName>
        <label>Street2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Count__c</fullName>
        <formula>Opportunity__r.Submission_Count__c</formula>
        <label>Submission Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TransactionID__c</fullName>
        <label>TransactionID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VANReference__c</fullName>
        <label>VANReference</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>CC &amp; EFT Alias</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>Card_Holder_Name__c</columns>
        <columns>Last_Four_Digits__c</columns>
        <columns>NAME</columns>
        <columns>PaymentTypeID__c</columns>
        <columns>TransactionID__c</columns>
        <columns>Payment_ID__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>GUID__c</columns>
        <columns>Card_Type__c</columns>
        <columns>Expire_Date__c</columns>
        <columns>Bank_Account_Owner_Name__c</columns>
        <columns>Bank_Account_Type__c</columns>
        <columns>Bank_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>CE-0000273222,CE-0000375354</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllEFT</fullName>
        <columns>Account__c</columns>
        <columns>Card_Holder_Name__c</columns>
        <columns>Last_Four_Digits__c</columns>
        <columns>NAME</columns>
        <columns>PaymentTypeID__c</columns>
        <columns>TransactionID__c</columns>
        <columns>Payment_ID__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>GUID__c</columns>
        <columns>Card_Type__c</columns>
        <columns>Expire_Date__c</columns>
        <columns>Bank_Account_Owner_Name__c</columns>
        <columns>Bank_Account_Type__c</columns>
        <columns>Bank_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CC_Alias__c.EFT_Alias</value>
        </filters>
        <label>All EFT</label>
    </listViews>
    <listViews>
        <fullName>CC_EFT_Alias_by_Account_Name</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Bank_Account_Type__c</columns>
        <columns>Last_Four_Digits__c</columns>
        <columns>Expire_Date__c</columns>
        <columns>GUID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Boudreau</value>
        </filters>
        <label>CC EFT Alias by Account Name</label>
    </listViews>
    <nameField>
        <displayFormat>CE-{0000000000}</displayFormat>
        <label>CC &amp; EFT Alias #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC &amp; EFT Aliases</pluralLabel>
    <recordTypes>
        <fullName>CC_Alias</fullName>
        <active>true</active>
        <label>CC Alias</label>
    </recordTypes>
    <recordTypes>
        <fullName>EFT_Alias</fullName>
        <active>true</active>
        <label>EFT Alias</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>